--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/detailsCoverId"
         android:layout_width="match_parent"
         android:layout_height="280dp"
         android:scaleType="fitXY"
@@ -29,6 +30,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/movieDetailsTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -59,6 +61,7 @@
                 app:tint="@color/deep_yellow" />
 
             <TextView
+                android:id="@+id/movieDetailsRatting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -66,6 +69,11 @@
 
 
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
+
 
         <TextView
             android:layout_width="match_parent"
@@ -77,6 +85,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/movieDetailsDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
