--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:id="@+id/home_fragment_id"
-    tools:context="HomeFragment">
+    tools:context=".Home.HomeFragment">
 
     <ImageView
         android:id="@+id/drawerIcon"
