--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeId"
+        android:id="@+id/homeFragment"
         android:title="HOME" />
 
     <item
-        android:id="@+id/bookMarkId"
+        android:id="@+id/bookmarkFragment"
         android:title="BOOKMARK" />
 </menu>
