--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.arif.movielistnative.HomeFragment"
+        android:name="com.arif.movielistnative.Home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -20,8 +20,12 @@
         android:label="fragment_details"
         tools:layout="@layout/fragment_details" />
     <fragment
-        android:id="@+id/bookamrkFragment"
-        android:name="com.arif.movielistnative.BookmarkFragment"
+        android:id="@+id/bookmarkFragment"
+        android:name="com.arif.movielistnative.Bookmark.BookmarkFragment"
         android:label="fragment_bookamrk"
-        tools:layout="@layout/fragment_bookmark" />
+        tools:layout="@layout/view_bookmark" >
+        <action
+            android:id="@+id/action_bookmarkFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+    </fragment>
 </navigation>
