--- a/app/src/main/res/layout/view_genres_list.xml
+++ b/app/src/main/res/layout/view_genres_list.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_margin="5dp"
+    android:elevation="2dp">
 
     <TextView
+        android:id="@+id/genresId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="7dp"
         android:text="Action"
         android:textSize="15sp" />
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
