--- a/app/src/main/res/layout/view_bookmark.xml
+++ b/app/src/main/res/layout/view_bookmark.xml
@@ -2,10 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bookmark_layout_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:elevation="3dp"
-    android:id="@+id/bookmark_layout_id"
     app:cardCornerRadius="30dp">
 
     <LinearLayout
@@ -22,9 +23,10 @@
             <ImageView
                 android:id="@+id/bookmark_poster_id"
                 android:layout_width="120dp"
-                android:layout_height="180dp"
+                android:layout_height="160dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/movie_poster" />
+                android:src="@drawable/movie_poster"
+                tools:ignore="ContentDescription" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
@@ -64,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -76,17 +78,19 @@
                 <TextView
                     android:id="@+id/bookmark_rating_id"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="9.8/10 IMDb"
                     tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/bookmarkGenresList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/view_genres_list" />
@@ -94,7 +98,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -107,7 +111,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="1h 20min" />
+                    android:text="1h 20min"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
         </LinearLayout>
