--- a/app/src/main/res/layout/view_genres_list.xml
+++ b/app/src/main/res/layout/view_genres_list.xml
@@ -2,8 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="15dp"
     android:layout_margin="5dp"
-    android:elevation="2dp">
+    android:backgroundTint="@color/light_blue_30"
+    android:elevation="0dp">
 
     <TextView
         android:id="@+id/genresId"
@@ -11,6 +14,7 @@
         android:layout_height="wrap_content"
         android:padding="7dp"
         android:text="Action"
+        android:textColor="@color/light_blue_50"
         android:textSize="15sp" />
 
 </androidx.cardview.widget.CardView>
