--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,15 +9,15 @@
     android:padding="10dp"
     tools:context=".Home.HomeFragment">
 
-    <ScrollView
+    <com.amar.library.ui.StickyScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:stickyHeader="@+id/bottom">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
 
             <ImageView
                 android:id="@+id/drawerIcon"
@@ -62,23 +62,30 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/view_now_showing_movie" />
 
-            <TextView
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/bottom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Popular Movie"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/popularRecView"
-                android:layout_width="match_parent"
-                android:layout_height="700dp"
-                android:layout_marginTop="10dp"
-                android:focusable="true"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/view_popular_movie_showing" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Popular Movie"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/popularRecView"
+                    android:layout_width="match_parent"
+                    android:layout_height="700dp"
+                    android:layout_marginTop="10dp"
+                    android:focusable="true"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/view_popular_movie_showing" />
+            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </com.amar.library.ui.StickyScrollView>
 </LinearLayout>
