Genres list working

--- a/app/src/main/res/layout/view_popular_movie_showing.xml
+++ b/app/src/main/res/layout/view_popular_movie_showing.xml
@@ -64,6 +64,7 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/genresPopularRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
